# another-million-checkboxes

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md  tasks.md
.github/workflows/: ruff.yml
src/checkboxes/: schemas.py
