[tool.poetry]
name = "another-million-checkboxes"
version = "0.1.0"
description = ""
authors = ["Jerry Xing <j27xing@uwaterloo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

### Ruff codestyle config ###
[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C", "N"]
ignore = ["E203", "E266", "E501", "F403", "F401"]
exclude = ["migrations", "venv", "tests"]

[tool.poetry.scripts]
lint = "ruff ."
fix = "ruff . --fix"
