[tool.poetry]
name = "another-million-checkboxes"
version = "0.1.0"
description = ""
authors = ["Jerry Xing <j27xing@uwaterloo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

### Ruff linter config
[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "C", "N"]
lint.ignore = ["E203", "E266", "E501", "F403", "F401"]
lint.exclude = ["migrations", "venv", "tests"]